--- a/fontendv1.1/src/components/dashboard/Header.css
+++ b/fontendv1.1/src/components/dashboard/Header.css
@@ -1,5 +1,5 @@
 .main-header{
-    box-shadow: 5px 5px 13px #e4e3e3,-5px -5px 13px #e4e3e3;
+    /* box-shadow: 5px 5px 13px #e4e3e3,-5px -5px 13px #e4e3e3; */
     padding: 1em 0 ;
 }
 
