--- a/fontendv1.1/src/components/eventsDetails copy/body/bodyEventDetail.css
+++ b/fontendv1.1/src/components/eventsDetails copy/body/bodyEventDetail.css
@@ -67,15 +67,13 @@
     margin-bottom: 4em;
 }
 
-.gallery-event-container .bottom-style{
-    margin:auto;
-    text-align: center;
-    width: 40%;
-    background-color:rgb(6, 4, 153);
-    height: 10px;
-    margin-bottom: 4em;
+.description-event-detail{
+    
 }
+.text-description-event{
 
+
+}
 
 
 .plus-info-description-event{
@@ -136,14 +134,6 @@
 .poste-event-postes{
     display: flex;
     justify-content: space-around;
-    
-}
-
-
-.conference-event-conferences{
-    display: flex;
-    justify-content: space-around;
-
 }
 
 
