--- a/fontendv1.1/src/components/eventsDetails/Conferences/ConferenceCard.css
+++ b/fontendv1.1/src/components/eventsDetails/Conferences/ConferenceCard.css
@@ -20,3 +20,10 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 } 
+
+
+.conference-card-container .conference-h6-theme{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
