modif offre dash

--- a/fontendv1.1/src/components/dashboard/pages/Offres/NewOffres.css
+++ b/fontendv1.1/src/components/dashboard/pages/Offres/NewOffres.css
@@ -5,8 +5,8 @@
 
 .header-new-offre{
     padding: 2em;
-    margin:1em 1em;
-    background:#fff;
+    background:rgb(2, 0, 102);
+    color:#fff;
 }
 
 .offre-container-tst{
