--- a/fontendv1.1/src/components/signup/SecondeSignup.css
+++ b/fontendv1.1/src/components/signup/SecondeSignup.css
@@ -16,7 +16,7 @@
     font-weight:lighter;
 }
 
-.input-structure{
-    height: 3em;
-    width:21em;
+.input-other-structure{
+   
+    width:40em;
 }
