--- a/fontendv1.1/src/views/Signup/signup.css
+++ b/fontendv1.1/src/views/Signup/signup.css
@@ -1,4 +1,4 @@
 .signup-container{
-    margin-top: 10em;
-    
+    background: url("../../assets/images/signup/bg-inscription1.jpg") center no-repeat ;
+   
 }
