--- a/fontendv1.1/src/views/Signup/signup.css
+++ b/fontendv1.1/src/views/Signup/signup.css
@@ -1,4 +1,4 @@
 .signup-container{
-    background: url("../../assets/images/signup/bg-inscription1.jpg") center no-repeat ;
+    background: url("../../assets/images/signup/bg-inscription3.jpg") ;
    
 }
